# petmanager

./: .gitignore  2022032504_任坤_开题报告.docx  PROJECT_STATUS.md  PetManager.pro  README.md  Result_1.csv  add_driver_schedules.py  check_counts.py  check_db_orders.py  check_fks.py  check_orders_only.py  check_schema.py  cleansalary.py  cleanup.py  cleanup2.py  clear_business_data.py  common_types.h  db_audit.py  db_fix_all.py  et --hard HEAD  fill_supplier_phones.py  fix_collations.py  fix_inbound_sale_price.py  fix_orders_schema.py  generate_mock_schedules.py  get_products.py  implementation_plan.md.resolved  inspect_schema.py  loadingwindow.cpp  loadingwindow.h  log1.txt  log2.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proposal.txt  (+22 more)
design-system/petmanager-order-center/: MASTER.md
design-system/petmanager-order-center/pages/: checkout.md
design-system/petmanager-pro/: MASTER.md
design-system/petmanager-pro/pages/: main_dashboard.md
docs/design/: admin_modules_preview.html  admin_stats_final.html  admin_stats_preview.html  admin_stats_refined.html  attendance_design_preview.html  quick_order_mockup.html
docs/plans/: 2026-05-06-stats-module-refactoring.md
docs/superpowers/plans/: 2026-04-27-product-inbound-decoupling.md  2026-05-03-service-and-quick-checkout.md  2026-05-05-service-dialog-beautification.md  2026-05-08-backup-system.md  2026-05-08-operation-log.md  2026-05-08-password-dialog-beautification.md  2026-05-08-system-settings.md  2026-05-10-appointment-logistics-plan.md  2026-05-10-scheduling-data-sync-plan.md  2026-05-13-data-sync-and-db-interaction-fix.md  2026-05-17-staff-attendance-clockin-integration.md  2026-05-18-staff-center-realtime-kpi-plan.md  2026-05-21-boarding-detail-enhancement.md  2026-05-21-chart-localization.md
docs/superpowers/specs/: 2026-04-20-centralized-data-sync-design.md  2026-04-26-gender-symbol-optimization-design.md  2026-04-27-product-inbound-decoupling-design.md  2026-04-29-logistics-cockpit-design.md  2026-05-03-checkout-module-optimization-design.md  (+11 more)
modules/: addappointmentdialog.cpp  addappointmentdialog.h  addemployeedialog.cpp  addemployeedialog.h  addmemberdialog.cpp  addmemberdialog.h  addmemberdialog.ui  addpetdialog.cpp  addpetdialog.h  addpetdialog.ui  appointmentdetaildrawer.cpp  appointmentdetaildrawer.h  appointmentitemdelegate.cpp  appointmentitemdelegate.h  appointmentmodule.cpp  appointmentmodule.h  backupmanager.cpp  backupmanager.h  backupprogressdialog.cpp  backupprogressdialog.h  boardingdatamanager.h  checkoutmodule.cpp  checkoutmodule.h  compactcalendar.h  custom_calendar_edit.cpp  custom_calendar_edit.h  custommessagedialog.cpp  custommessagedialog.h  editattendancedialog.cpp  editattendancedialog.h  employeedetaildrawer.cpp  employeedetaildrawer.h  financemodule.cpp  financemodule.h  fosterganttdelegate.h  fosterganttmodel.h  fostermodule.cpp  fostermodule.h  globallightbox.cpp  globallightbox.h  (+82 more)
scratch/: check_avatar_data.py  check_db.py  fix_member_genders.py  img_to_b64.py  mock_schedules.py  reset_to_new_shop.py  seed_employees.py  seed_employees_final.py  seed_members_pets.py  setup_vaccine_db.py  test_db_insert.py  update_avatars_base64.py  update_pet_avatars_base64.py  update_pet_info.py  update_pet_info_fixed.py
scripts/: restore_db.py  seed_products.py  seed_real_products.sql  update_images.py
server/: CMakeLists.txt  fix_db.py  logger_compat.h  main.cpp  result.txt  schema.txt  update_orders.sql
server/database/: connectionpool.cpp  connectionpool.h
server/logic/: appointment_controller.cpp  appointment_controller.h  finance_controller.cpp  finance_controller.h  log_controller.cpp  log_controller.h  logistics_controller.cpp  logistics_controller.h  member_controller.cpp  member_controller.h  order_controller.cpp  order_controller.h  pet_controller.cpp  pet_controller.h  product_controller.cpp  product_controller.h  report_controller.cpp  report_controller.h  schedule_controller.cpp  schedule_controller.h  service_controller.cpp  service_controller.h  staff_controller.cpp  staff_controller.h  user_controller.cpp  user_controller.h
server/network/: client_handler.cpp  client_handler.h  server_core.cpp  server_core.h
utils/: imageutils.h  logger.cpp  logger.h  networkmanager.cpp  networkmanager.h
(+27 files in other folders)
